--- a/package.json
+++ b/package.json
@@ -2,31 +2,72 @@
   "name": "human-health",
   "version": "0.1.0",
   "private": true,
+  "author": "Gabriel Caiana <gabrielcaianaguedes@gmail.com",
+  "license": "UNLICENSED",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
+    "build-stg": "vue-cli-service build --mode staging",
+    "build-prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
+    "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "material-design-iconic-font": "^2.2.0",
+    "material-icons": "^0.7.6",
+    "sass-resources-loader": "^2.2.3",
+    "sweetalert2": "^11.0.18",
+    "typeface-roboto": "^1.1.13",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-i18n": "^8.24.5",
+    "vue-loading-overlay": "^3.4.2",
+    "vue-option-events": "^2.0.1",
+    "vue-router": "^3.5.2",
+    "vue-the-mask": "^0.11.1",
+    "vuetify": "^2.5.6",
+    "vuetify-money": "^1.2.0",
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
-    "prettier": "^2.2.1",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-vuetify": "^1.0.1",
+    "prettier": "^2.3.2",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "plugin:prettier/recommended",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "optionalDependencies": {
+    "fsevents": "*"
   }
 }
